--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Joyeux Anniversaire Roumaissa !</title>
     <meta property="og:title" content="Roro's anniversary">
     <meta property="og:description" content="Happy birthday my love">
-    <meta property="og:image" content=https://fertasmohammedredha.github.io/r/20fcc0b3cfccc24accc028f6c8c85234.jpg
+    <meta property="og:image" content="https://fertasmohammedredha.github.io/r/20fcc0b3cfccc24accc028f6c8c85234.jpg"
     <meta property="og:url" content="https://fertasmohammedredha.github.io/r/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
